# cold-storage-controller

./: .clang-format  .gitignore  .mxproject  CMakeLists.txt  README.md  cold-storage-controller.ioc  compile_commands.json
APP/include/: adc_app.h  alarm.h  compressor.h
APP/source/: adc_app.c  alarm.c  compressor.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32g0xx_it.h
Core/Src/: adc.c  gpio.c  main.c  stm32g0xx_it.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
